Tue Jul 11 06:38:42 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.h: add xthickness and ythickness to GtkRcStyle and
	add the necessary tokens.

	* gtk/gtkrc.c (gtk_rc_style_init): properly initiality the rc style.
	(gtk_rc_style_to_style): copy thicknesses.
	(gtk_rc_init_style): apply thicknesses.
	(gtk_rc_parse_style): parse xthickness and ythickness.

	* gdk/x11/gdkdnd-x11.c: silence compiler in switch() statements.

	* gdk/x11/gdkwindow-x11.c (gdk_window_foreign_new): 
	(gdk_window_new): 
	(_gdk_windowing_window_init): 
	* gdk/x11/gdkpixmap-x11.c (gdk_pixmap_foreign_new): 
	(gdk_pixmap_create_from_data): 
	(gdk_bitmap_create_from_data): 
	(gdk_pixmap_new): 
	* gdk/x11/gdkimage-x11.c (gdk_image_get): 
	(gdk_image_new): 
	* gdk/x11/gdkgc-x11.c (_gdk_x11_gc_new): 
	* gdk/x11/gdkdnd-x11.c (gdk_drag_context_new): 
	* gdk/x11/gdkcolor-x11.c (gdkx_colormap_get):
	(gdk_colormap_get_system): 
	(gdk_colormap_new): 
	* gdk/gdkwindow.c (gdk_window_init): 
	* gtk/gtkstyle.c (gtk_style_new):
	* gtk/gdk-pixbuf-loader.c (gdk_pixbuf_loader_frame_done):
	* gdk/gdkpixmap.c (gdk_pixmap_init): 
	* gtk/gtkrc.c (gtk_rc_style_new):
	use g_object_new() instead of g_type_create_instance() which
	is a private function for fundamental type implementations.

Thu Jul  6 16:12:14 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add check for db2html

Thu Jul  6 14:53:05 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktypeutils.c (gtk_type_init): Add a temporary 
	hack to set glib_debug_objects based on gtk_debug_flags.

Thu Jul  6 14:12:13 2000  Owen Taylor  <otaylor@redhat.com>

	* INSTALL.in: Update the Prerequisites section.

	* Makefile.am demos/Makefile.am docs/Makefile.am
	docs/tutorial/Makefile.am gdk/x11/Makefile.am
	gdk/linux-fb/Makefile.am: Dist fixes

Thu Jul  6 12:26:03 2000  Owen Taylor  <otaylor@redhat.com>

	* NEWS: 10,000 foot view of 1.3.1 changes.

Thu Jul  6 11:54:03 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h gdk/gdktypes.h gdk/linux-fb/gdkmain-fb.c